--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -16,6 +16,7 @@
   left: 0;
   overflow: auto;
   z-index: 99;
+  background-color: #fff;
 }
 
 ._plekan_arena{
@@ -92,7 +93,10 @@
       display: block;
       width: 100%;
       height: 40px;
-      background-color: #111;
+      background: linear-gradient(270deg, $primaryColor, #3f702d, #76b91a, #3e5b6e);
+      background-size: 800% 800%;
+      animation: gradiendAnimation 30s ease infinite;
+      margin: 10px 0;
       *{
         display: none;
         text-indent: -99999999px;
@@ -148,19 +152,24 @@
         position: absolute;
         width: 60px;
         left: -60px;
-        display: none;
-        top: -10px;
+        // display: none;
+        top: -0px;
+        // background-color: rgba(107, 105,164,.8);
+        overflow: hidden;
         span{
           display: block;
           color: #FFF;
-          width: 50px;
-          height: 50px;
+          width: 40px;
+          height: 40px;
           text-align: center;
-          line-height: 50px;
+          line-height: 40px;
           margin-right: 10px;
           font-size: 16px;
           background-color: $primaryColor;
           cursor: pointer;
+          &:hover{
+            opacity: .9;
+          }
         }
       }
     }
@@ -373,13 +382,20 @@
   }
 }
 
-.plekan-save{
+.plekan-footer-button{
   float: right;
   display: inline-block;
   border:0;
   background-color: $primaryColor;
   color: #FFF;
   padding: 10px 50px;  
+  margin-left: 10px;
+  &.cancel{
+    background-color: green;
+  }
+  &.save{
+    background-color: blue;
+  }
 }
 
 @keyframes gradiendAnimation { 
@@ -390,12 +406,11 @@
 
 
 
-// pre {
-//     display: none;
-//     white-space: pre-wrap;       /* Since CSS 2.1 */
-//     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-//     white-space: -pre-wrap;      /* Opera 4-6 */
-//     white-space: -o-pre-wrap;    /* Opera 7 */
-//     word-wrap: break-word;       /* Internet Explorer 5.5+ */
-// }
+pre {
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
 
