Initial dist subtree commit

--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -152,7 +152,7 @@
         position: absolute;
         width: 60px;
         left: -60px;
-        // display: none;
+        display: none;
         top: -0px;
         // background-color: rgba(107, 105,164,.8);
         overflow: hidden;
