--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -110,9 +110,10 @@
       background-color: #ccc;
       background: linear-gradient(270deg, $primaryColor, #3f702d, #76b91a, #3e5b6e);
       background-size: 800% 800%;
-      // animation: gradiendAnimation 30s ease infinite;
+      animation: gradiendAnimation 30s ease infinite;
+      border-radius: 5px;
       &:after{
-        content: "Arena";
+        content: "Preview Arena";
         width: 100%;
         height: 100%;
         top: 0;
@@ -120,6 +121,7 @@
         text-align: center;
         font-size: 25px;
         color: #FFF;
+        font-weight: 100;
       }
       span.sortable-chosen,span.sortable-ghost{
         content: "";
@@ -128,6 +130,7 @@
         height: 100%;
         top: 0;
         left: 0;
+        margin: 0;
         background-color: transparent!important;
         outline: 3px dotted $primaryColor;
         z-index: 12;
@@ -390,11 +393,17 @@
   color: #FFF;
   padding: 10px 50px;  
   margin-left: 10px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  &:hover{
+    transition: opacity .3s;
+    opacity: .4;
+  }
   &.cancel{
     background-color: green;
   }
   &.save{
-    background-color: blue;
+    background-color: #4EA81E;
   }
 }
 
