--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -148,6 +148,7 @@ box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
     .plekan-row-item{
       position: relative;
       margin-bottom: 10px;
+      clear: both;
       // background-color: #ccc;
       &:hover{
         .plekan-tools{
