--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -149,6 +149,13 @@ box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
       position: relative;
       margin-bottom: 10px;
       clear: both;
+      margin: 40px 0;
+      &:after,&:before{
+        content: "";
+        float: none;
+        clear: both;
+        display: table;
+      }
       // background-color: #ccc;
       &:hover{
         .plekan-tools{
