--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -1,6 +1,7 @@
 @import "./grid.scss";
 @import "./animated.scss";
 @import "./var.scss";
+@import "./modules.scss";
 
 [contenteditable='true']{
   &:focus{
