--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -18,6 +18,9 @@
   overflow: auto;
   z-index: 99;
   background-color: #fff;
+  *{
+    // outline: thick;
+  }
 }
 
 ._plekan_arena{
@@ -34,9 +37,7 @@
     background-color: #fff;
     z-index: 11;
     border-bottom: 1px solid #ddd;
-    -webkit-box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
--moz-box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
-box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
     span{
       float: left;
       margin-right: 10px;
@@ -99,7 +100,7 @@ box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
       height: 40px;
       background: linear-gradient(270deg, $primaryColor, #3f702d, #76b91a, #3e5b6e);
       background-size: 800% 800%;
-      animation: gradiendAnimation 30s ease infinite;
+      // animation: gradiendAnimation 30s ease infinite;
       margin: 10px 0;
       *{
         display: none;
@@ -114,7 +115,7 @@ box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
       background-color: #ccc;
       background: linear-gradient(270deg, $primaryColor, #3f702d, #76b91a, #3e5b6e);
       background-size: 800% 800%;
-      animation: gradiendAnimation 30s ease infinite;
+      // animation: gradiendAnimation 30s ease infinite;
       border-radius: 5px;
       &:after{
         content: "Preview Arena";
