--- a/src/assets/style/var.scss
+++ b/src/assets/style/var.scss
@@ -1,6 +1,8 @@
-$primaryColor 	: #6b69a4;
-$textColor 	   	: #444;
-$borderColor     : #dadada;
+$primaryColor : #373838;
+$textColorDark : #444;
+$textColorLight : #ccc;
+$borderColorLight : #ddd;
+$borderColorDark : #111;
 
 button{
 	outline: thick;
