Added colors  palate, Updated Modal.

--- a/src/assets/style/animated.scss
+++ b/src/assets/style/animated.scss
@@ -18,6 +18,11 @@
   animation-duration: .4s!important;
 }
 
+.custom-classes-transition-child{
+  animation-duration: .7s!important;
+}
+
+
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
