--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -192,6 +192,9 @@
       }
     }
   }
+  .plekan-footer{
+    margin-top: 20px;
+  }
 }
 /*------------------------------------------*/
 .editor-arena{
